--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -45,7 +45,7 @@ $grid-breakpoints: (
 @import "layouts/_pages";
 // pages css
 @import "pages/_home";
-
+@import "pages/_shop";
 
 // parts css
-@import "parts/_tabs"
+@import "parts/_tabs";
