--- a/src/scss/parts/_tabs.scss
+++ b/src/scss/parts/_tabs.scss
@@ -9,6 +9,23 @@
                 background-color: $color-013945;
                 color: $white;
             }
+
+            &.tab-btn {
+
+                &.active {
+                    background-color: $color-013945;
+                    color: $white;
+                }
+
+                background-color: $color-139cd5 ;
+                color: $white;
+
+                &:hover {
+                    background-color: transparent;
+                    color: $color-139cd5;
+                    border: 1px solid $color-139cd5;
+                }
+            }
         }
     }
 }
