--- a/src/scss/common/_variables.scss
+++ b/src/scss/common/_variables.scss
@@ -28,6 +28,9 @@ $font30 :30px;
 $font40 :40px;
 $font48 :48px;
 
+$font30 :30px;
+$font20 :20px;
+
 /*******************************************************************************
 ******************************* LINE HEIGHT *******************************
 *******************************************************************************/
