header with responsive

--- a/src/scss/common/_variables.scss
+++ b/src/scss/common/_variables.scss
@@ -13,6 +13,7 @@ $color-4d4d4d :#4d4d4d;
 $color-a8a8a8 :#a8a8a8;
 $color-dadada :#dadada;
 $color-00000010 :#00000010;
+$color-00000000 :#00000000;
 $color-ffffff30 :#ffffff30;
 /*******************************************************************************
 ******************************* FONTS VARIABLES *******************************
@@ -27,9 +28,6 @@ $font28 :28px;
 $font30 :30px;
 $font40 :40px;
 $font48 :48px;
-
-$font30 :30px;
-$font20 :20px;
 
 /*******************************************************************************
 ******************************* LINE HEIGHT *******************************
