--- a/src/scss/layouts/_header.scss
+++ b/src/scss/layouts/_header.scss
@@ -33,7 +33,7 @@
 
             .navigation {
                 .nav {
-                    li {
+                    .menu-item {
                         &:last-child {
                             margin-right: 0 !important;
                         }
@@ -44,23 +44,25 @@
                             }
                         }
 
-
                         .nav-header-a {
                             color: $color-013945;
 
                             &:hover {
                                 color: $color-139cd5;
                             }
+
                             &::after {
-                                content: '';
+                                content: "";
                                 position: absolute;
-                                bottom: 0;
+                                bottom: -85px;
                                 left: 0;
-                                height: 15px;
-                                width: 0%;
+                                height: 50px;
+                                width: 50px;
+                                transform: rotate(45deg);
                                 opacity: 0;
                                 visibility: hidden;
-                                background-color: pink;
+                                background-color: $color-139cd5;
+                                transition: all 0.2s ease-in-out;
 
                                 @include media-breakpoint-down(lg) {
                                     display: none;
@@ -72,6 +74,26 @@
                             opacity: 0;
                             visibility: hidden;
                             transform: translateY(-30px);
+
+                            &.resource-menu {
+                                width: 250px;
+
+                                .resource-navigation {
+                                    li {
+                                        &:last-child {
+                                            margin-bottom: 0 !important;
+                                        }
+
+                                        &>a {
+                                            color: $white;
+
+                                            &:hover {
+                                                color: $color-139cd5;
+                                            }
+                                        }
+                                    }
+                                }
+                            }
                         }
                     }
                 }
@@ -85,6 +107,61 @@
         .basket-logo {
             width: 23px;
         }
+
+        .menu-toggle {
+            margin-left: 30px;
+
+            .burgar-menu {
+                width: 28px;
+                height: 24px;
+                cursor: pointer;
+                transform: scaleX(-1);
+
+                line {
+                    stroke: $color-139cd5;
+                    stroke-dasharray: 120%;
+                    stroke-dashoffset: 0%;
+                    transition: transform 0.3s, stroke-dashoffset 0.4s;
+                    transform-origin: center;
+                    stroke-width: 3px;
+
+                    &.top {
+                        transform: translateY(-44%);
+                    }
+
+                    &.middle {
+                        transform: scaleX(1);
+                        transition: opacity 0.3s, transform 0.3s;
+                    }
+
+                    &.bottom {
+                        transform: translateY(45%);
+                    }
+                }
+
+                &.activate {
+                    .top {
+                        transform: rotate(45deg);
+                        stroke-linecap: round;
+                    }
+
+                    .middle {
+                        transform: scaleX(0.1);
+                        opacity: 0;
+                    }
+
+                    line.bottom {
+                        transform: rotate(-45deg);
+                        stroke-linecap: round;
+                    }
+
+                    .bottom {
+                        stroke-dashoffset: 0%;
+                    }
+                }
+            }
+
+        }
     }
 
     &.header-hover {
@@ -93,11 +170,127 @@
                 .navigation {
                     .nav {
                         li {
-                            .mega-menu {
-                                opacity: 1;
-                                visibility: visible;
-                                transform: translateY(0px);
+                            &.menu-active {
+                                .mega-menu {
+                                    opacity: 1;
+                                    visibility: visible;
+                                    transform: translateY(0px);
+                                }
+
+                                .nav-header-a {
+                                    &::after {
+                                        opacity: 1;
+                                        visibility: visible;
+
+                                        @include media-breakpoint-down(lg) {
+                                            display: none;
+                                        }
+                                    }
+
+                                    &.resource-a {
+                                        &::after {
+                                            opacity: 0;
+                                            visibility: hidden;
+                                        }
+                                    }
+                                }
                             }
+                        }
+                    }
+                }
+            }
+        }
+    }
+
+    // res header
+    .res-navigation {
+        height: 300px;
+        opacity: 0;
+        visibility: hidden;
+        padding-top: 0;
+    }
+
+    &.header-active {
+        height: 100vh;
+        overflow: auto;
+        background-color: $color-013945;
+
+        .menu-toggle {
+            margin-top: 50px;
+
+            .burgar-menu {
+                line {
+                    stroke: $color-139cd5;
+                }
+            }
+        }
+
+        .res-navigation {
+            height: fit-content;
+            opacity: 1;
+            visibility: visible;
+
+
+            .menu-items {
+                .menu-item {
+                    .menu-arrow {
+                        width: 20px;
+
+                        .arrow-2 {
+                            display: none;
+                        }
+
+                        .arrow-1 {
+                            display: inline-block;
+                        }
+                    }
+
+                    .nav-header-a {
+                        color: $white;
+                    }
+
+                    .mega-menu {
+                        background-color: transparent !important;
+                        height: 0;
+                        overflow: hidden;
+                    }
+                }
+            }
+        }
+    }
+
+
+    &.header-megamenu-active {
+        .res-navigation {
+            padding-top: 35px !important;
+
+            .menu-items {
+                padding-bottom: 55px !important;
+
+                .menu-item {
+                    margin: 0 !important;
+
+                    &.res-menu-active {
+                        .arrow-2 {
+                            display: inline-block;
+                            transform: rotate(180deg);
+                        }
+
+                        .arrow-1 {
+                            display: none;
+                        }
+
+                        .nav-header-a {
+                            color: $color-139cd5;
+                        }
+
+                        .mega-menu {
+                            position: initial !important;
+                            opacity: 1;
+                            visibility: visible;
+                            height: 100%;
+                            overflow: visible;
+                            transform: translateY(0);
                         }
                     }
                 }
