--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -46,6 +46,7 @@ $grid-breakpoints: (
 // pages css
 @import "pages/_home";
 @import "pages/_shop";
+@import "pages/_about-us";
 
 // parts css
 @import "parts/_tabs";
