--- a/src/scss/components/_slick.scss
+++ b/src/scss/components/_slick.scss
@@ -11,8 +11,7 @@
         .timeline-bg {
             height: 139px;
             width: 250px;
-            bottom: 66px;
-            left: 25%;
+            margin-top:-100px;
         }
     }
 }
